--- a/style.css
+++ b/style.css
@@ -1,480 +1,668 @@
 @font-face {
-    font-family: "futurak";
-    src: url(font/futurak.ttf);
+  font-family: "futurak";
+  src: url(font/futurak.ttf);
 }
 
-body{
-    margin: 0px;
+body {
+  margin: 0px;
 }
-.header{
-    width:100%;
-    background-color: black;
-    padding: 10px 150px;
-    height: 120px;
+.header {
+  width: 100%;
+  background-color: black;
+  padding: 10px 150px;
+  height: 120px;
 }
-.logo > img{
-    width: 180px;
-    vertical-align: middle;
+.logo > img {
+  width: 180px;
+  vertical-align: middle;
 }
 .menu > li {
-    display: inline-block;
-    color: white;
-    margin-bottom:40px ;
-    font-size: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
+  display: inline-block;
+  color: white;
+  margin-bottom: 40px;
+  font-size: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
-.logo,.right-side{
-    display: inline-block;
+.logo,
+.right-side {
+  display: inline-block;
 }
-.logo{
-    width: 20%;
- 
+.logo {
+  width: 20%;
 }
-.right-side{
-    width: 45%;
-    text-align: right;
- 
-    vertical-align: middle;
+.right-side {
+  width: 45%;
+  text-align: right;
+
+  vertical-align: middle;
 }
-.button > button{
-    border: none;
-    padding: 15px 20px;
-    border-radius: 35px;
+.button > button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 35px;
 }
-.btn-one{
-    background-color: transparent;
-    color: white;
-    border: 1px solid white !important;
+.btn-one {
+  background-color: transparent;
+  color: white;
+  border: 1px solid white !important;
 }
-.btn-two{
-    background-color: red;
-    border: 1px solid red !important;
-    color: white;
+.btn-two {
+  background-color: red;
+  border: 1px solid red !important;
+  color: white;
 }
-.menu{
-    display: inline-block;
+.menu {
+  display: inline-block;
 }
-.button{
-    display: inline-block;
+.button {
+  display: inline-block;
 }
-.right-side{
-    margin-top: 40px;
-    vertical-align: middle;
+.right-side {
+  margin-top: 40px;
+  vertical-align: middle;
 }
-.btn-two > i{
-    background-color: white;
-    color: red;
-    border-radius: 100%;
-    padding: 8px;
+.btn-two > i {
+  background-color: white;
+  color: red;
+  border-radius: 100%;
+  padding: 8px;
 }
-.btn-two{
-    padding: 10px !important ;
+.btn-two {
+  padding: 10px !important ;
 }
-.slide{
-    width: 100%;
-    height: 700px;
-    
+.slide {
+  width: 100%;
+  height: 700px;
 }
-.slide > img{
-    width: 100%;
-    height: 100%;
+.slide > img {
+  width: 100%;
+  height: 100%;
 }
 .intro {
-    width: 100%;
-    height: 500px;
-    background-color: black;
+  width: 100%;
+  height: 500px;
+  background-color: black;
 }
-.intro >.content > h2
-{margin: 0%;
-        color: white;
+.intro > .content > h2 {
+  margin: 0%;
+  color: white;
 }
-.intro >.content> p{
-    color: white;
+.intro > .content > p {
+  color: white;
 }
-.content{
-    text-align: center;
-    width: 100%;
-    padding: 50px;
+.content {
+  text-align: center;
+  width: 100%;
+  padding: 50px;
 }
-.content>h2>span{
-    font-family: futurak;
+.content > h2 > span {
+  font-family: futurak;
 }
-.content>h2{
-    font-size: 40px;
-    letter-spacing: 5px;
+.content > h2 {
+  font-size: 40px;
+  letter-spacing: 5px;
 }
-.content>p{
-    color: white;
+.content > p {
+  color: white;
 }
-.card-logo{
-    text-align: center;
-    width: 250px;
-    background-color: white;
-    padding: 30px 10px;
+.card-logo {
+  text-align: center;
+  width: 250px;
+  background-color: white;
+  padding: 30px 10px;
 }
-.card-logo > img{
-    width: 70%;
+.card-logo > img {
+  width: 70%;
 }
-.card-btn > button{
-    border: none;
-    padding: 15px 50px;
-    border-radius: 35px;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white !important;
+.card-btn > button {
+  border: none;
+  padding: 15px 50px;
+  border-radius: 35px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white !important;
 }
 .card-btn {
-    width: 250px;
-    margin-top: 10px;
-    text-align: center;
+  width: 250px;
+  margin-top: 10px;
+  text-align: center;
 }
-.cards{
-    display: inline-block;
+.cards {
+  display: inline-block;
 }
-.cards-container{
-    text-align: center;
+.cards-container {
+  text-align: center;
 }
 
 /* franchise-section one */
-.franchise-section-one{
-    width: 100%;
-    height: 1400px;
-    background-color: rgb(18, 16, 16);
+.franchise-section-one {
+  width: 100%;
+  height: 1400px;
+  background-color: rgb(18, 16, 16);
 }
-.franchise-content>p{
-    margin: 0%;
-    color: white;
+.franchise-content > p {
+  margin: 0%;
+  color: white;
 }
-.franchise-font{
-    font-family: futurak;
-    font-size: 50px;
+.franchise-font {
+  font-family: futurak;
+  font-size: 50px;
 }
-.franchise-para{
-    font-size: 50px;
+.franchise-para {
+  font-size: 50px;
 }
-.franchise-content{
-    padding: 50px;
-    text-align: center;
-    line-height: 55px;
+.franchise-content {
+  padding: 50px;
+  text-align: center;
+  line-height: 55px;
 }
 
 /* franchise two styling */
 
-
-.franchise-section-two{
-    width: 100%;
-    color: white;
-    margin-left: 500px;
-
+.franchise-section-two {
+  width: 100%;
+  color: white;
+  margin-left: 500px;
 }
-.section-two-content > .islamabad{
-       color: red;
-       letter-spacing: 8px;
-       font-size: 20px;
+.section-two-content > .islamabad {
+  color: red;
+  letter-spacing: 8px;
+  font-size: 20px;
 }
-.section-two-font{
-    font-family: futurak;
-    font-size: 35px;
+.section-two-font {
+  font-family: futurak;
+  font-size: 35px;
 }
-.section-two-content-para{
-    font-size: 35px;
-   
+.section-two-content-para {
+  font-size: 35px;
 }
-.section-two-content-contact{
-    font-size: 17px;
-    line-height:40px;
-    
+.section-two-content-contact {
+  font-size: 17px;
+  line-height: 40px;
 }
-.section-two-content{
-    width: auto;
-    display: inline-block;
-    vertical-align: top;
+.section-two-content {
+  width: auto;
+  display: inline-block;
+  vertical-align: top;
 }
-.franchise-image-one{
-    width: auto;
-    display: inline-block;
-    margin-left: 100px;
+.franchise-image-one {
+  width: auto;
+  display: inline-block;
+  margin-left: 100px;
 }
 
 /* franchise section three */
 
-.franchise-section-three{
-    width: 100%;
-    color: white;
-    padding-top: 50px;
-    
-    
+.franchise-section-three {
+  width: 100%;
+  color: white;
+  padding-top: 50px;
 }
-.section-three-content > .islamabad{
-    color: red;
-    letter-spacing: 8px;
-    font-size: 20px;
+.section-three-content > .islamabad {
+  color: red;
+  letter-spacing: 8px;
+  font-size: 20px;
 }
-.section-three-font{
-    font-family: futurak;
-    font-size: 35px;
+.section-three-font {
+  font-family: futurak;
+  font-size: 35px;
 }
-.section-three-content-para{
-    font-size: 35px;
-   
+.section-three-content-para {
+  font-size: 35px;
 }
-.section-three-content-contact{
-    font-size: 17px;
-    line-height:40px;
+.section-three-content-contact {
+  font-size: 17px;
+  line-height: 40px;
 }
-.section-three-content{
-    display: inline-block;
-    margin-left: 100px;
-    vertical-align: top;
+.section-three-content {
+  display: inline-block;
+  margin-left: 100px;
+  vertical-align: top;
 }
-.franchise-image-three{
-    width: auto;
-    display: inline-block;
-    margin-left: 500px;
-    
+.franchise-image-three {
+  width: auto;
+  display: inline-block;
+  margin-left: 500px;
 }
 
 /* frachise section four */
 
-.franchise-section-four{
-    width: 100%;
-    color: white;
-    margin-left: 500px;
-margin-top: 50px;
+.franchise-section-four {
+  width: 100%;
+  color: white;
+  margin-left: 500px;
+  margin-top: 50px;
 }
-.section-four-content > .islamabad{
-       color: red;
-       letter-spacing: 8px;
-       font-size: 20px;
+.section-four-content > .islamabad {
+  color: red;
+  letter-spacing: 8px;
+  font-size: 20px;
 }
-.section-four-font{
-    font-family: futurak;
-    font-size: 35px;
+.section-four-font {
+  font-family: futurak;
+  font-size: 35px;
 }
-.section-four-content-para{
-    font-size: 35px;
-   
+.section-four-content-para {
+  font-size: 35px;
 }
-.section-four-content-contact{
-    font-size: 17px;
-    line-height:40px;
-    
+.section-four-content-contact {
+  font-size: 17px;
+  line-height: 40px;
 }
-.section-four-content{
-    width: auto;
-    display: inline-block;
-    vertical-align: top;
+.section-four-content {
+  width: auto;
+  display: inline-block;
+  vertical-align: top;
 }
-.franchise-image-four{
-    width: auto;
-    display: inline-block;
-    margin-left: 100px;
+.franchise-image-four {
+  width: auto;
+  display: inline-block;
+  margin-left: 100px;
 }
 /* franchises-section  */
-.franchises-section{
-    width: 100%;
-    height: 2100px;
-    background-color: black;
-    color: white;
-    line-height: 30px;
+.franchises-section {
+  width: 100%;
+  height: 2100px;
+  background-color: black;
+  color: white;
+  line-height: 30px;
 }
-.franchises-heading-font{
-    font-family: futurak;
-    font-size: 50px;
-    margin: 0%;
+.franchises-heading-font {
+  font-family: futurak;
+  font-size: 50px;
+  margin: 0%;
 }
-.franchises-heading{
-    padding: 80px;
-    text-align: center;
+.franchises-heading {
+  padding: 80px;
+  text-align: center;
 }
-.franchises-heading>p{
-    font-size: 60px;
-
+.franchises-heading > p {
+  font-size: 60px;
 }
 /* franchises section one */
-.franchise-container-one{
-    width: 100%;
-    text-align: center;
-    display: inline-block; 
+.franchise-container-one {
+  width: 100%;
+  text-align: center;
+  display: inline-block;
 }
-.package-mall>img{
-    width: 350px;
+.package-mall > img {
+  width: 350px;
 }
-.package-mall{
-    width: auto;
-    display: inline-block;
-    margin: 20px;
+.package-mall {
+  width: auto;
+  display: inline-block;
+  margin: 20px;
 }
-.emporium-mall{
-    width: auto;
-    display: inline-block;
-    margin: 20px;
+.emporium-mall {
+  width: auto;
+  display: inline-block;
+  margin: 20px;
 }
-.gujranwala-mall{
-    width: auto;
-    display: inline-block;
-    margin: 20px;
+.gujranwala-mall {
+  width: auto;
+  display: inline-block;
+  margin: 20px;
 }
-.emporium-mall>img{
-    width: 350px;
+.emporium-mall > img {
+  width: 350px;
 }
-.gujranwala-mall>img{
-    width: 350px;
+.gujranwala-mall > img {
+  width: 350px;
 }
-.gujranwala-mall-head{
-    color: red;
-    letter-spacing: 8px;
+.gujranwala-mall-head {
+  color: red;
+  letter-spacing: 8px;
 }
-.package-mall-head{
-    color: red;
-    letter-spacing: 8px;
+.package-mall-head {
+  color: red;
+  letter-spacing: 8px;
 }
-.emporium-mall-head{
-    color: red;
-    letter-spacing: 8px ;
+.emporium-mall-head {
+  color: red;
+  letter-spacing: 8px;
 }
-.package-mall-font{
-    font-family: futurak;
-    font-size: 30px;
+.package-mall-font {
+  font-family: futurak;
+  font-size: 30px;
 }
-.emporium-mall-font{
-    font-family: futurak;
-    font-size: 30px;
+.emporium-mall-font {
+  font-family: futurak;
+  font-size: 30px;
 }
-.gujranwala-mall-font{
-    font-family: futurak;
-    font-size: 30px;
+.gujranwala-mall-font {
+  font-family: futurak;
+  font-size: 30px;
 }
-.express{
-    font-size: 30px;
+.express {
+  font-size: 30px;
 }
 
-.package-mall-contact{
-    font-size: 17px;
+.package-mall-contact {
+  font-size: 17px;
 }
-.emporium-mall-contact{
-    font-size: 17px ;
+.emporium-mall-contact {
+  font-size: 17px;
 }
-.gujranwala-mall-contact{
-    font-size: 17px ;
+.gujranwala-mall-contact {
+  font-size: 17px;
 }
-.package-mall button{
-    border: none;
-    padding: 15px 20px;
-    border-radius: 35px;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white ;
+.package-mall button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 35px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
 }
-.emporium-mall button{
-    border: none;
-    padding: 15px 20px;
-    border-radius: 35px;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white ;
+.emporium-mall button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 35px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
 }
-.gujranwala-mall button{
-    border: none;
-    padding: 15px 20px;
-    border-radius: 35px;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white ;
+.gujranwala-mall button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 35px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
 }
 
 /* franchises section two */
 
+.franchise-container-one {
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+}
+.package-mall > img {
+  width: 350px;
+}
+.package-mall {
+  width: auto;
+  display: inline-block;
+  margin: 20px;
+}
+.emporium-mall {
+  width: auto;
+  display: inline-block;
+  margin: 20px;
+}
+.gujranwala-mall {
+  width: auto;
+  display: inline-block;
+  margin: 20px;
+}
+.emporium-mall > img {
+  width: 350px;
+}
+.gujranwala-mall > img {
+  width: 350px;
+}
+.gujranwala-mall-head {
+  color: red;
+  letter-spacing: 8px;
+}
+.package-mall-head {
+  color: red;
+  letter-spacing: 8px;
+}
+.emporium-mall-head {
+  color: red;
+  letter-spacing: 8px;
+}
+.package-mall-font {
+  font-family: futurak;
+  font-size: 30px;
+}
+.emporium-mall-font {
+  font-family: futurak;
+  font-size: 30px;
+}
+.gujranwala-mall-font {
+  font-family: futurak;
+  font-size: 30px;
+}
+.express {
+  font-size: 30px;
+}
 
+.package-mall-contact {
+  font-size: 17px;
+}
+.emporium-mall-contact {
+  font-size: 17px;
+}
+.gujranwala-mall-contact {
+  font-size: 17px;
+}
+.package-mall button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 35px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+}
+.emporium-mall button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 35px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+}
+.gujranwala-mall button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 35px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+}
+.village-Franchise-section {
+  width: 100%;
+  height: 800px;
+  background-color: rgb(20, 16, 16);
+  color: white;
+  font-size: 50px;
+}
+.village-Franchise-section p {
+  margin: 0%;
+}
+.village-Franchise-img {
+  display: inline-block;
+  margin-top: 30px;
+}
+.village-Franchise-img img {
+  width: 900px;
+}
+.village-Franchise-text {
+  display: inline-block;
+}
+.village-franchise-head-font {
+  font-family: futurak;
+}
+.village-franchise-head {
+  text-align: center;
+  padding-top: 40px;
+}
+.village-franchise-gujranwala {
+  font-size: 18px;
+  color: red;
+  letter-spacing: 8px;
+}
+.village-Franchise-text {
+  width: auto;
+}
+.village-Franchise-content .village-Franchise-text {
+  vertical-align: top;
+  margin-top: 170px;
+  line-height: 40px;
+  margin-left: 20px;
+}
+.village-Franchise-text button {
+  font-size: 15px;
+  background-color: #28a745;
+  color: white;
+  width: 200px;
+  padding: 15px;
+  border-radius: 30px;
+}
 
-.franchise-container-one{
-    width: 100%;
+/* express locations card */
+.Express-Franchises-section {
+  width: 100%;
+  height: 1950px;
+  background-color: black;
+}
+.Express-Franchise-heading p {
+  margin: 0%;
+  color: white;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 20px;
+}
+.Express-Franchise-heading-font {
+  font-family: futurak;
+}
+.Opening {
+  font-size: 25px;
+}
+.card-one {
+  display: inline-block;
+  margin: 20px;
+  height: 230px;
+  background: #ffffff;
+  border-radius: 4px;
+  text-align: center;
+  padding: 25px 24px;
+  margin-bottom: 32px;
+  width: 15%;
+}
+.card-two {
+  display: inline-block;
+  margin: 20px;
+  height: 230px;
+  background: #ffffff;
+  border-radius: 4px;
+  text-align: center;
+  padding: 25px 24px;
+  margin-bottom: 32px;
+  width: 15%;
+}
+.card-three {
+  display: inline-block;
+  margin: 20px;
+  height: 230px;
+  background: #ffffff;
+  border-radius: 4px;
+  text-align: center;
+  padding: 25px 24px;
+  margin-bottom: 32px;
+  width: 15%;
+}
+.Express-Franchise-section-one {
+  margin: 50px;
+  text-align: center;
+  font-size: 20px;
+}
+.Opening-soon {
+  color: red;
+  letter-spacing: 5px;
+  font: 17px;
+}
+.Express-Franchise-section-font {
+  font-weight: bold;
+  font-size: 25px;
+}
+.Express-Franchise-section-font span {
+  font-weight: normal;
+}
+.social-feed p{
+    color: white;
+    font-size: 35px ;
+    font-weight: bold;
     text-align: center;
-    display: inline-block; 
 }
-.package-mall>img{
-    width: 350px;
+.social-feed-images img{
+    width: 17%;
+   margin: 23px;
 }
-.package-mall{
-    width: auto;
+footer{
+    width: 100%;
+    height: 455px;
+    background-color: rgb(20, 16, 16);
+    
+}
+.footer-left img{
+    width: 30%;
+}
+.footer-left{
+     padding-top: 50px;
+     padding-left: 300px;
+     display: inline-block;
+} 
+.footer-left p{
+    font-size: 17px;
+    color: rgba(255, 255, 255, 0.7);
+}
+.footer-center1{
+    display: inline-block  ;
+    color: rgba(255, 255, 255, 0.7);
+    vertical-align: top;
+    margin-top: 50px;
+    width: 10%;
+
+}
+.footer-center2 h3{
+    color: white;
+}
+.footer-center1 h3{
+    color: white;
+}
+.footer-center2{
+    vertical-align: top;
+    margin-top: 50px;
+    color:rgba(255, 255, 255, 0.7) ;
     display: inline-block;
-    margin: 20px;
-}
-.emporium-mall{
-    width: auto;
-    display: inline-block;
-    margin: 20px;
-}
-.gujranwala-mall{
-    width: auto;
-    display: inline-block;
-    margin: 20px;
-}
-.emporium-mall>img{
-    width: 350px;
-}
-.gujranwala-mall>img{
-    width: 350px;
-}
-.gujranwala-mall-head{
-    color: red;
-    letter-spacing: 8px;
-}
-.package-mall-head{
-    color: red;
-    letter-spacing: 8px;
-}
-.emporium-mall-head{
-    color: red;
-    letter-spacing: 8px ;
-}
-.package-mall-font{
-    font-family: futurak;
-    font-size: 30px;
-}
-.emporium-mall-font{
-    font-family: futurak;
-    font-size: 30px;
-}
-.gujranwala-mall-font{
-    font-family: futurak;
-    font-size: 30px;
-}
-.express{
-    font-size: 30px;
 }
 
-.package-mall-contact{
-    font-size: 17px;
+
+.footer-right{
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 50px;
+    color:rgba(255, 255, 255, 0.7) ;
+    display: inline-block;
+    width: 20%;
+    padding-left: 70px;
 }
-.emporium-mall-contact{
-    font-size: 17px ;
-}
-.gujranwala-mall-contact{
-    font-size: 17px ;
-}
-.package-mall button{
-    border: none;
-    padding: 15px 20px;
-    border-radius: 35px;
-    background-color: transparent;
+.footer-right h3{
     color: white;
-    border: 1px solid white ;
 }
-.emporium-mall button{
-    border: none;
-    padding: 15px 20px;
-    border-radius: 35px;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white ;
+.footer-right img{
+    width: 8%;
+    border-radius: 5px;
 }
-.gujranwala-mall button{
-    border: none;
-    padding: 15px 20px;
-    border-radius: 35px;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white ;
+.footer-right .googleplay{
+    width:150px;
+}
+.last-footer{
+    border: 1px solid rgb(39, 33, 33);
+    height: 60px;
+    color:rgba(255, 255, 255, 0.7) ;
+}
+.last-footer .right{
+    margin-left: 300px;
+    margin-top: 13px;
+    display: inline-block;
+}
+.last-footer .left{
+     display: inline-block;
+     margin-left: 800px;
 }
